Fixed whitespace on the side of the timeline in mobile

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -8,10 +8,13 @@ $accent: #fb866a;
 
 .timeline-html {
 	overflow-x: hidden;
+    margin:0;
+    padding:0;
 }
 .timeline-body{
 	overflow-x: hidden;
-	padding: 0;
+    margin:0;
+    padding:0;
 }
 
 .timeline-section {
@@ -22,8 +25,8 @@ $accent: #fb866a;
 	background: #4B6A78;
 	color: $smoky-white;
 	padding: 30px 0;
-	margin: 0;
-	width: 100%;
+	margin: 0 auto;
+	// width: 100%;
 	p {
 		margin-bottom: 0;
 		margin-top: 10px;
@@ -39,8 +42,6 @@ $accent: #fb866a;
 }
 
 .timeline-bg{
-	// background:#fff;
-	// max-width: 1000px;
     margin: 0 auto;
     position: relative;
 }
